--- a/public/updates.html
+++ b/public/updates.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>법령 알림 | 전체 목록 + 변경 강조</title>
+  <title>법령 변경 알림</title>
   <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
   <style>
     :root{--bg:#0b1220;--text:#e6eefc;--muted:#9fb3d6;--shadow:0 10px 30px rgba(0,0,0,.35);--radius:16px;--max:1100px;--good:#22c55e;--warn:#f59e0b;--bad:#ef4444;}
@@ -14,7 +14,8 @@
     .inner{max-width:var(--max);margin:0 auto;padding:14px 16px;display:flex;justify-content:space-between;gap:12px;align-items:center}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800}
     .logo{width:34px;height:34px;border-radius:10px;background:linear-gradient(135deg,rgba(110,231,255,.25),rgba(124,58,237,.30));border:1px solid rgba(110,231,255,.25);box-shadow:var(--shadow)}
-    .chip{padding:8px 10px;border-radius:999px;background:rgba(22,39,68,.85);border:1px solid rgba(31,47,74,.85);color:var(--muted);font-weight:700;font-size:12.5px}
+    .chip{padding:8px 10px;border-radius:999px;background:rgba(22,39,68,.85);border:1px solid rgba(31,47,74,.85);color:var(--muted);font-weight:700;font-size:12.5px; cursor: pointer;}
+    .chip:hover{background:rgba(31,47,74,1);}
     main{max-width:var(--max);margin:18px auto 34px;padding:0 16px}
     .hero{padding:18px;background:linear-gradient(180deg,rgba(15,26,43,.88),rgba(15,26,43,.65));border:1px solid rgba(31,47,74,.85);border-radius:var(--radius);box-shadow:var(--shadow)}
     h1{margin:0 0 6px;font-size:20px}
@@ -29,33 +30,43 @@
     .mark.new{color:#22c55e}
     .mark.mod{color:#f59e0b}
     .mark.del{color:#ef4444}
+    .search-bar{display:flex;gap:10px;align-items:center;flex-wrap:wrap; margin-bottom: 12px;}
+    .search-bar input[type=date]{background:rgba(22,39,68,.85);border:1px solid rgba(31,47,74,.85);color:var(--muted);font-size:13px;padding:8px 10px; border-radius:10px;}
+    .search-bar button{padding:8px 12px; border-radius:10px; font-weight:700; background:rgba(31,47,74,.85);color:var(--text);border:1px solid rgba(45,62,91,1); cursor: pointer;}
+    .search-bar button:hover{background:rgba(45,62,91,1);}
   </style>
 </head>
 <body>
 <header class="top">
   <div class="inner">
     <div class="brand"><span class="logo"></span><span>airpermit.work</span></div>
-    <a class="chip" href="/changes.html">변경사항만</a>
+    <a class="chip" href="/law-alert/updates.html">전체 목록</a>
   </div>
 </header>
 
 <main>
   <section class="hero">
-    <h1>법령 알림 · 전체 목록 + 변경 강조</h1>
+    <h1>법령 변경 알림</h1>
     <div id="meta" class="muted" style="line-height:1.65"></div>
   </section>
 
   <section class="card">
+    <div class="search-bar">
+      <label for="startDate">기간:</label>
+      <input type="date" id="startDate">
+      <span>-</span>
+      <input type="date" id="endDate">
+      <button id="searchBtn">검색</button>
+      <span id="resultCount" class="muted"></span>
+    </div>
     <div class="muted" style="margin-bottom:10px">
       <span class="badge">표기</span>
       <span class="mark new">NEW</span> 신규 ·
-      <span class="mark mod">MOD</span> 변경 ·
-      <span class="mark del">DEL</span> 삭제/해제 ·
-      <span class="badge">OK</span> 변화 없음
+      <span class="mark mod">MOD</span> 변경
     </div>
     <div style="overflow:auto">
       <table>
-        <thead><tr><th style="width:90px">상태</th><th style="width:140px">구분</th><th>제목</th><th style="width:140px">일자</th><th style="width:220px">식별자</th></tr></thead>
+        <thead><tr><th style="width:90px">상태</th><th style="width:140px">구분</th><th>제목</th><th style="width:140px">공포/제안일</th><th style="width:140px">감지일(UTC)</th></tr></thead>
         <tbody id="tbody"><tr><td colspan="5" class="muted">로딩 중…</td></tr></tbody>
       </table>
     </div>
@@ -65,61 +76,95 @@
 
 <script>
 const pad2 = (n)=>String(n).padStart(2,"0");
-const pad3 = (n)=>String(n).padStart(3,"0");
-const WEEK=["\uc77c","\uc6d4","\ud654","\uc218","\ubaa9","\uae08","\ud1a0"];
-const esc = (s)=>String(s).replace(/[&<>"']/g,c=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[c]));
-function fmtKorean(iso){
-  const d=new Date(iso);
-  if(isNaN(d.getTime())) return {text:"-", d:null};
-  const y=d.getFullYear(), m=pad2(d.getMonth()+1), day=pad2(d.getDate()), w=WEEK[d.getDay()];
-  const hh=pad2(d.getHours()), mm=pad2(d.getMinutes()), ss=pad2(d.getSeconds()), ms=pad3(d.getMilliseconds());
-  return {text:`${y}\ub144 ${m}\uc6d4 ${day}\uc77c (${w}) ${hh}:${mm}:${ss}.${ms}`, d};
+const esc = (s)=>String(s).replace(/[&<>'"`]/g,c=>({"&":"&amp;","<":"&lt;">":"&gt;","'":"&#39;","\"":"&quot;","`":"&#96;"}[c]));
+
+// Date to YYYY-MM-DD
+function toDateInput(d) {
+    return `${d.getFullYear()}-${pad2(d.getMonth() + 1)}-${pad2(d.getDate())}`;
 }
-function diffToHourZero(d){const z=new Date(d); z.setMinutes(0,0,0); return d-z;}
-function humanDelay(ms){const sign=ms>=0?"+":"-"; ms=Math.abs(ms); const m=Math.floor(ms/60000); const s=Math.floor((ms%60000)/1000); const r=ms%1000; return `${sign}${m}\ubd84 ${s}\ucd08 ${pad3(r)}ms`;}
-function humanSince(ms){const m=Math.floor(ms/60000); const s=Math.floor((ms%60000)/1000); return `${m}\ubd84 ${s}\ucd08`;}
 
-(async function(){
-  const res=await fetch("https://jinsu133.github.io/airpermit-law-alert/updates.json?ts="+Date.now());
-  if(!res.ok) throw new Error("updates.json \ub85c\ub4dc \uc2e4\ud328");
-  const data=await res.json();
-  const iso=data.generated_at_kst||data.generated_at_utc||"";
-  const f=fmtKorean(iso);
-  let delay="-", since="-", badge="";
-  if(f.d){
-    delay=humanDelay(diffToHourZero(f.d));
-    const now=new Date(); const sinceMs=now-f.d; since=humanSince(Math.max(0,sinceMs));
-    badge=(sinceMs>75*60*1000)
-      ? `<div class="bad" style="margin-top:6px;font-weight:900">⚠ 갱신 지연/실패 의심: 마지막 성공 후 ${since}</div>`
-      : `<div class="ok"  style="margin-top:6px;font-weight:900">✓ 정상: 마지막 성공 후 ${since}</div>`;
+let allItems = []; // To store all fetched items
+
+function renderTable(items) {
+  const tb = document.getElementById("tbody");
+  if (!items.length) {
+    tb.innerHTML='<tr><td colspan="5" class="muted">해당 기간에 변경된 항목이 없습니다.</td></tr>';
+    document.getElementById("resultCount").textContent = "0개 항목";
+    return;
   }
-  document.getElementById("meta").innerHTML =
-    `<div><span class="badge">\uac31\uc2e0 \uc2dc\uac01(KST)</span> <b title="${iso}">${esc(f.text)}</b></div>
-     <div><span class="badge">\uc815\uac01 \ub300\ube44 \uc9c0\uc5f0</span> <b>${delay}</b></div>${badge}`;
-
-  const items=Array.isArray(data.items)?data.items:[];
-  const tb=document.getElementById("tbody");
-  if(!items.length){tb.innerHTML='<tr><td colspan="5" class="muted">\ud45c\uc2dc\ud560 \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.</td></tr>';return;}
-  const rows=[];
+  const rows = [];
   for(const it of items){
-    const st=(it.status||"OK").toUpperCase();
-    let cls="mark"; if(st==="NEW") cls+=" new"; else if(st==="MOD") cls+=" mod"; else if(st==="DEL") cls+=" del";
-    const stHtml=(st==="OK")?`<span class="badge">OK</span>`:`<span class="${cls}">${st}</span>`;
+    const st=(it.status||"").toUpperCase();
+    let cls="mark"; if(st==="NEW") cls+=" new"; else if(st==="MOD") cls+=" mod";
     rows.push(`<tr>
-      <td>${stHtml}</td>
+      <td><span class="${cls}">${st}</span></td>
       <td>${esc(it.kind||"")}</td>
       <td>${esc(it.title||"")}</td>
       <td>${esc(it.date||"")}</td>
-      <td class="muted">${esc(it.id||"")}</td>
+      <td>${(it.detected_at_utc||"").slice(0,10)}</td>
     </tr>`);
   }
-  tb.innerHTML=rows.join("");
+  tb.innerHTML = rows.join("");
+  document.getElementById("resultCount").textContent = `${items.length}개 항목`;
+}
+
+function filterAndRender() {
+    const startVal = document.getElementById("startDate").value;
+    const endVal = document.getElementById("endDate").value;
+    if (!startVal || !endVal) {
+        renderTable(allItems.slice(0, 50)); // Show recent 50 if no range
+        return;
+    }
+    const startDate = new Date(startVal + "T00:00:00Z");
+    const endDate = new Date(endVal + "T23:59:59Z");
+
+    const filtered = allItems.filter(it => {
+        const detectedDate = new Date(it.detected_at_utc);
+        return detectedDate >= startDate && detectedDate <= endDate;
+    });
+    renderTable(filtered);
+}
+
+(async function(){
+  // Setup date inputs
+  const endDateEl = document.getElementById("endDate");
+  const startDateEl = document.getElementById("startDate");
+  const today = new Date();
+  const thirtyDaysAgo = new Date();
+  thirtyDaysAgo.setDate(today.getDate() - 30);
+  endDateEl.value = toDateInput(today);
+  startDateEl.value = toDateInput(thirtyDaysAgo);
+
+  document.getElementById("searchBtn").addEventListener("click", filterAndRender);
+
+  // Fetch data
+  const res = await fetch("https://jinsu133.github.io/airpermit-law-alert/changelog.json?ts="+Date.now());
+  if(!res.ok) throw new Error("changelog.json 로드 실패");
+  const data = await res.json();
+  
+  allItems = Array.isArray(data.items) ? data.items : [];
+  
+  // Initial render
+  filterAndRender();
+
+  // Meta info (from health.json)
+  try {
+    const healthRes = await fetch("https://jinsu133.github.io/airpermit-law-alert/health.json?ts="+Date.now());
+    const healthData = await healthRes.json();
+    const lastSuccess = new Date(healthData.last_success_utc || 0);
+    const sinceMs = new Date() - lastSuccess;
+    const sinceMin = Math.floor(sinceMs / 60000);
+    const badge = (sinceMs > 75 * 60 * 1000)
+      ? `<div class="bad" style="margin-top:6px;font-weight:900">⚠ 갱신 지연/실패 의심: 마지막 성공 후 ${sinceMin}분</div>`
+      : `<div class="ok"  style="margin-top:6px;font-weight:900">✓ 정상: 마지막 성공 후 ${sinceMin}분</div>`;
+    document.getElementById("meta").innerHTML = badge;
+  } catch(e) { /* ignore health check fail */ }
+
 })().catch(err=>{
   console.error(err);
-  document.getElementById("tbody").innerHTML='<tr><td colspan="5" class="bad">\ub85c\ub529 \uc624\ub958: '+esc(err.message||err)+'</td></tr>';
+  document.getElementById("tbody").innerHTML='<tr><td colspan="5" class="bad">로드 오류: '+esc(err.message||err)+'</td></tr>';
   document.getElementById("meta").innerHTML='<div class="bad" style="font-weight:900">⚠ 데이터를 불러오지 못했습니다.</div>';
 });
 </script>
 </body>
 </html>
-
